# frontier

./: .gitignore  ACKNOWLEDGEMENTS.md  AGENTS.md  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  codemeta.json  frontier_fast_native.py  frontier_native.py  llms.txt  pyproject.toml  setup.py  sliding_window_baseline.py
.github/ISSUE_TEMPLATE/: benchmark_report.yml  bug_report.yml
.github/workflows/: ci.yml
constraints/: README.md  TODO.md  py312-ubuntu-ci.TODO.md  py314-macos-validated.txt
docs/: ACADEMIC_METADATA.md  ARCHITECTURE.md  ASSET_MANIFEST.md  ASSET_PROVENANCE.md  BENCHMARK_SCHEMA.md  COMMANDS.md  DECODER_POSITIONING.md  ENVIRONMENT.md  FILE_SCOPE.md  FRONTIER_CARD.md  LICENSING.md  RELEASE.md  REPRODUCIBILITY.md  VISIBILITY_RELEASE_CHECKLIST.md  WORKLOG.md  WORKLOG.tex
examples/: README.md  inspect_dem.py  minimal_decode.py  replay_rotated_surface_d3.sh
frontier/: __init__.py  decoder.py  dem.py  progressive.py
grosscode/: __init__.py  baseline.py  benchmark.py  core.py  correlated.py  masked_quaternary_bp.py  model.py  native_paper_minsum.py  nonbinary_cnot.py
grosscode/bench/: baseline.py  compare.py  matched.py  monte_carlo.py  smoke.py
grosscode/circuits/: __init__.py  backends.py  base.py  bravyi_depth7.py  depth8_candidate.py  tanner_redundant_extraction.py  tanner_redundant_syndrome.py
grosscode/codes/: __init__.py  bivariate_bicycle.py  css.py  generalized_bicycle.py  gross144.py  gross_144_12_12.py  rotated_surface.py  surface.py
grosscode/decoders/: __init__.py  _base.py  api.py  common.py  full_block.py  full_bp.py  full_minsum.py  logical_coset_triangle_descent.py  structure_aware.py  triangle_quotient_minsum.py  triangle_quotient_shortlist.py  triangle_small_set_flip.py  uf_triangle_stage1.py  windowed_bp.py  windowed_minsum.py
grosscode/decoders/local_round/: __init__.py  base.py  topk.py  windowed_local_round.py
grosscode/dem/: __init__.py  augmented_triangles.py  builder.py  css_split_builder.py  inspect.py  projected_location.py  projected_location_minsum.py  reference_recovery.py  stim_fault_pipeline.py  triangle_basis.py  triangle_surgery.py  triangles.py
grosscode/polar_dem/: README.md  __init__.py  adapters.py  arikan.py  dynamic_frozen.py  exact_map.py  experiments_large_scan.py  experiments_small.py  gf2.py  plotting.py  sc_posterior.py  scl_decoder.py
grosscode/utils/: __init__.py  gf2.py  pandas_lite.py  paths.py  tanner_cycles.py
native/: _frontier_fast_native.cpp  _frontier_native.cpp
paper/: README.md
paper/plots/: README.md  manifest.csv
paper/plots/data/: MANIFEST.md  README.md  fig_algorithm_recap_states.csv  fig_algorithm_recap_states.json  fig_bb72_dem_fer_vs_mean_states.csv  fig_bb72_dem_fer_vs_mean_states.json  fig_bb72_dem_fer_vs_p.csv  fig_bb72_dem_fer_vs_p.json  fig_color_threshold_fer.csv  fig_color_threshold_fer.json  fig_color_threshold_retained_states.csv  fig_color_threshold_retained_states.json  fig_failure_decomposition.csv  fig_failure_decomposition.json  fig_frontier_schematic_elements.csv  fig_frontier_schematic_elements.json  fig_gross_dem_avg_vs_peak_retained.csv  fig_gross_dem_avg_vs_peak_retained.json  fig_gross_dem_fer_vs_avg_retained.csv  fig_gross_dem_fer_vs_avg_retained.json  fig_gross_dem_fer_vs_p.csv  fig_gross_dem_fer_vs_p.json  fig_surface_memory_z_dem_mwpm.csv  fig_surface_memory_z_dem_mwpm.json  fig_surface_threshold.csv  fig_surface_threshold.json  fig_transition_evals_tail.csv  (+3 more)
tests/: test_examples_and_cli.py  test_frontier_export.py  test_paper_plots.py
tools/: __init__.py  asset_manifest.py  dem_loader.py  frontier_bb144_benchmark.py  frontier_decoder.py  frontier_fast_bb144_benchmark.py  frontier_fast_decoder.py  frontier_fast_sample_replay.py  frontier_progressive.py  frontier_sample_replay.py  frontier_sample_rows.py  frontierk_prune_blocks.py  gross144_dem_x_progressive_report.py  steane_progressive_decoder.py
(+21 files in other folders)
