[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frontier"
version = "0.1.0"
description = "C++-accelerated frontier decoder with optional forward/backward committee."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.8",
  "ldpc>=2.4",
  "numpy>=2.0",
  "scipy>=1.12",
  "stim>=1.15",
]

[project.scripts]
frontier-smoke = "tools.frontier_decoder:main"
frontier-dem-info = "tools.dem_loader:main"
frontier-sample-rows = "tools.frontier_sample_rows:main"
frontier-replay = "tools.frontier_sample_replay:main"
frontier-bb144-benchmark = "tools.frontier_bb144_benchmark:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["frontier*", "grosscode*", "tools*"]

[tool.setuptools.package-data]
frontier = ["py.typed"]
grosscode = [
  "assets/gross144/dem/*.json",
  "assets/gross144/dem/*.npy",
  "assets/gross144/dem/*.npz",
  "assets/gross144/gross_code/*.mtx",
  "assets/gross144/stim_circuits/*.stim",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
