[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frontier"
version = "0.1.0"
description = "Frontier decoder for quantum LDPC codes and detector error models."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.11"
authors = [
  { name = "Anthony Leverrier" },
  { name = "Rüdiger Urbanke" },
]
keywords = [
  "quantum LDPC",
  "QLDPC",
  "quantum error correction",
  "stabilizer codes",
  "detector error model",
  "logical maximum likelihood",
  "coset decoding",
  "dynamic programming",
  "boundary state decoder",
  "frontier decoder",
  "bivariate bicycle code",
  "LDPC codes",
  "BB code",
  "Gross code",
  "Stim",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "matplotlib>=3.8",
  "ldpc>=2.4",
  "numpy>=2.0",
  "scipy>=1.12",
  "stim>=1.15",
]

[project.scripts]
frontier-smoke = "tools.frontier_decoder:main"
frontier-dem-info = "tools.dem_loader:main"
frontier-sample-rows = "tools.frontier_sample_rows:main"
frontier-replay = "tools.frontier_sample_replay:main"
frontier-bb144-benchmark = "tools.frontier_bb144_benchmark:main"

[project.urls]
Repository = "https://github.com/aleverrier/frontier"
Documentation = "https://github.com/aleverrier/frontier#readme"
Issues = "https://github.com/aleverrier/frontier/issues"
Paper = "https://arxiv.org/abs/2606.20513"
Changelog = "https://github.com/aleverrier/frontier/blob/main/CHANGELOG.md"
Citation = "https://github.com/aleverrier/frontier/blob/main/CITATION.cff"
Reproducibility = "https://github.com/aleverrier/frontier/blob/main/docs/REPRODUCIBILITY.md"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.setuptools.packages.find]
include = ["frontier*", "grosscode*", "tools*"]

[tool.setuptools.package-data]
frontier = ["py.typed"]
grosscode = [
  "assets/gross144/dem/*.json",
  "assets/gross144/dem/*.npy",
  "assets/gross144/dem/*.npz",
  "assets/gross144/gross_code/*.mtx",
  "assets/gross144/stim_circuits/*.stim",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
ignore = [
  "E402",  # CLI modules adjust sys.path before imports for direct script execution.
  "E731",  # Existing frontier ranking helper uses a local lambda.
]

[tool.mypy]
python_version = "3.11"
packages = ["frontier"]
ignore_missing_imports = true
warn_unused_configs = true
